--- a/studentAccount.html
+++ b/studentAccount.html
@@ -17,7 +17,7 @@
             <img src="imgs/logo.svg" alt="" class="logoImg">
             <p class="logo">university Care System</p>
         </div>
-        <nav>
+        <nav id="mainnav">
             <ul>
                 <li><a href="homePagestudent.html">Home</a></li>
                 <li><a href="">My reports</a></li>
@@ -26,6 +26,14 @@
             </ul>
         </nav>
         <button onclick="window.location.href='welcomePage.html'" class="logOut">Log Out</button>
+        <nav id="mobnav">
+            <ul>
+                <li><a href="homePagestudent.html">Home</a></li>
+                <li><a href="">My reports</a></li>
+                <li><a href="chatBot.html">FaQ Bot</a></li>
+                <li><a href="studentAccount.html">My profile</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="detailsContainer">
@@ -36,7 +44,7 @@
 
             <div class="studentContainer">
                 <div class="studentDetailsContainer">
-                    <img id="img" src="imgs/1.jpg" alt="">
+                    <img id="img" src="imgs/2.png" alt="">
                     <div class="studentDetails">
                         <p>jseka wardy</p>
                         <p>Student</p>
