--- a/studentAccount.html
+++ b/studentAccount.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="studentAccount.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=border_color" />
-    <title>student account</title>
+        <link rel="icon" type="image/x-icon" href="imgs/logo.svg">
+        <title>student account</title>
     <script src="studentAccount.js" defer></script>
 </head>
 
