--- a/chatBot.html
+++ b/chatBot.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/@codingnepal -->
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chatbot</title>
   <!-- Linking Google Fonts For Icons -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@32,400,0,0" />
   <link rel="stylesheet" href="chatBot.css" />
+  <link rel="icon" type="image/x-icon" href="imgs/logo.svg">
+  <title>Chatbot</title>
 </head>
 
 <body>
