--- a/homePageStudent.html
+++ b/homePageStudent.html
@@ -18,7 +18,7 @@
       <img src="imgs/logo.svg" alt="" class="logoImg">
       <p class="logo">university Care System</p>
     </div>
-    <nav>
+    <nav id="mainnav">
       <ul>
         <li><a href="homePageStudent.html">Home</a></li>
         <li><a href="">My Health</a></li>
@@ -27,6 +27,14 @@
       </ul>
     </nav>
     <button onclick="window.location.href='welcomePage.html'" type="button" class="logOut">Log Out</button>
+    <nav id="mobnav">
+      <ul>
+        <li><a href="homePageStudent.html">Home</a></li>
+        <li><a href="">My Health</a></li>
+        <li><a href="chatBot.html">FaQ Bot</a></li>
+        <li><a href="studentAccount.html">My profile</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <section class="section1">
