--- a/doctorAccount.html
+++ b/doctorAccount.html
@@ -26,7 +26,7 @@
                 <li><a href="doctorAccount.html">My profile</a></li>
             </ul>
         </nav>
-        <button onclick="window.location.href='welcomePage.html'" class="logOut">Log Out</button>
+        <button onclick="window.location.href='index.html'" class="logOut">Log Out</button>
         <nav id="mobnav">
             <ul>
                 <li><a href="homePageDoctor.html">Home</a></li>
