--- a/homePageStudent.html
+++ b/homePageStudent.html
@@ -26,7 +26,7 @@
         <li><a href="studentAccount.html">My profile</a></li>
       </ul>
     </nav>
-    <button onclick="window.location.href='welcomePage.html'" type="button" class="logOut">Log Out</button>
+    <button onclick="window.location.href='index.html'" type="button" class="logOut">Log Out</button>
     <nav id="mobnav">
       <ul>
         <li><a href="homePageStudent.html">Home</a></li>
