خليت الصفحة متناسبة لجميع الاجهزة وعدلت الشكل و خليت كود الجافا سكريبت منظم اكتر

--- a/signUp.html
+++ b/signUp.html
@@ -23,8 +23,8 @@
             <div id="signUpFormContainer">
                 <p id="heading">Sign UP</p>
                 <div id="formTypeContainer">
-                    <button id="formTypeBtn1" class="formTypeBtn" value="doctor">doctor</button>
-                    <button id="formTypeBtn2" class="formTypeBtn hover" value="student">student</button>
+                    <button  class="formTypeBtn" value="doctor">doctor</button>
+                    <button  class="formTypeBtn hover" value="student">student</button>
                 </div>
                 <form action="#" id="signUpForm">
                     <input type="text" class="containerInputs" placeholder="First name" required>
