--- a/doctorAccount.html
+++ b/doctorAccount.html
@@ -49,8 +49,8 @@
                     <div class="doctorDetails">
                         <p>jseka wardy</p>
                         <p>doctor</p>
-                        <p>Egypt ,Cairo ,Korba</p>
-                        <p>Suez canal university </p>
+                        <p>email</p>
+                        <p>phone number </p>
                     </div>
                 </div>
             </div>
