--- a/studentAccount.html
+++ b/studentAccount.html
@@ -49,8 +49,8 @@
                     <div class="studentDetails">
                         <p>jseka wardy</p>
                         <p>Student</p>
-                        <p>Egypt ,Cairo ,Korba</p>
-                        <p>Faculty of computer science </p>
+                        <p>email</p>
+                        <p>phone number </p>
                     </div>
                 </div>
             </div>
