صفحة التقراير وتظبيط الهيدر في باقي الملفات

--- a/homePageDoctor.html
+++ b/homePageDoctor.html
@@ -20,19 +20,17 @@
     </div>
     <nav id="mainnav">
       <ul>
-        <li><a href="homePageStudent.html">Home</a></li>
-        <li><a href="">My Health</a></li>
-        <li><a href="chatBot.html">FaQ Bot</a></li>
-        <li><a href="studentAccount.html">My profile</a></li>
+        <li><a href="homePageDoctor.html">Home</a></li>
+        <li><a href="doctorReport.html">My reports</a></li>
+        <li><a href="doctorAccount.html">My profile</a></li>
       </ul>
     </nav>
     <button onclick="window.location.href='index.html'" type="button" class="logOut">Log Out</button>
     <nav id="mobnav">
       <ul>
-        <li><a href="homePageStudent.html">Home</a></li>
-        <li><a href="">My Health</a></li>
-        <li><a href="chatBot.html">FaQ Bot</a></li>
-        <li><a href="studentAccount.html">My profile</a></li>
+        <li><a href="homePageDoctor.html">Home</a></li>
+        <li><a href="doctorReport.html">My reports</a></li>
+        <li><a href="doctorAccount.html">My profile</a></li>
       </ul>
     </nav>
   </header>
