--- a/homePageStudent.html
+++ b/homePageStudent.html
@@ -21,7 +21,7 @@
     <nav id="mainnav">
       <ul>
         <li><a href="homePageStudent.html">Home</a></li>
-        <li><a href="">My Health</a></li>
+        <li><a href="studentReport.html">My health</a></li>
         <li><a href="chatBot.html">FaQ Bot</a></li>
         <li><a href="studentAccount.html">My profile</a></li>
       </ul>
@@ -30,7 +30,7 @@
     <nav id="mobnav">
       <ul>
         <li><a href="homePageStudent.html">Home</a></li>
-        <li><a href="">My Health</a></li>
+        <li><a href="studentReport.html">My health</a></li>
         <li><a href="chatBot.html">FaQ Bot</a></li>
         <li><a href="studentAccount.html">My profile</a></li>
       </ul>
