--- a/doctorReport.html
+++ b/doctorReport.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="doctorAccount.css">
+    <link rel="stylesheet" href="doctorReport.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=border_color" />
         <link rel="icon" type="image/x-icon" href="imgs/logo.svg">
-        <title>doctor account</title>
+        <title>doctor report</title>
     <script src="doctorAccount.js" defer></script>
 </head>
 
@@ -37,8 +37,7 @@
     <main>
         <section class="detailsContainer">
             <div class="t">
-                <h2>My profile Doctor</h2>
-                <!-- <button class="edit hidden" id="edit"> <span class="material-symbols-outlined">border_color</span>edit</button> -->
+                <h2>My reports</h2>
             </div>
 
             <div class="doctorContainer">
@@ -52,35 +51,6 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <section class="personalContainer">
-            <div class="headBtnContainer">
-                <h2>personal information</h2>
-                <!-- <button class="edit edit2">
-                        <span class="material-symbols-outlined">border_color</span>edit
-                    </button> -->
-            </div>
-            <div class="detailsEditContainer">
-                <form class="detailsEdit">
-                    <div class="inputContainer">
-                        <label for="">First name:</label>
-                        <input type="text" class="containerInputs" placeholder="First name" required>
-                    </div>
-                    <div class="inputContainer">
-                        <label for="">Last name:</label>
-                        <input type="text" class="containerInputs" placeholder="Last name" required>
-                    </div>
-                    <div class="inputContainer">
-                        <label for="">email:</label>
-                        <input type="email" class="containerInputs" placeholder="example@gmail.com" required>
-                    </div>
-                    <div class="inputContainer">
-                        <label for="">Phone Number:</label>
-                        <input type="tel" name="Phone Number" pattern="[0-9]{11}" required placeholder="Phone Number">
-                    </div>
-                </form>
-            </div>
-            <button class="apply">Apply</button>
         </section>
     </main>
     <footer id="footer">
