--- a/studentReport.html
+++ b/studentReport.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="studentAccount.css">
+    <link rel="stylesheet" href="studentReport.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=border_color" />
         <link rel="icon" type="image/x-icon" href="imgs/logo.svg">
-        <title>student account</title>
+        <title>student health</title>
     <script src="studentAccount.js" defer></script>
 </head>
 
@@ -39,50 +39,17 @@
     <main>
         <section class="detailsContainer">
             <div class="t">
-                <h2>My profile student</h2>
-                <!-- <button class="edit hidden" id="edit"> <span class="material-symbols-outlined">border_color</span>edit</button> -->
+                <h2>My health report</h2>
             </div>
 
             <div class="studentContainer">
                 <div class="studentDetailsContainer">
-                    <img id="img" src="imgs/2.png" alt="">
+                    <img id="img" class="hidden" src="" alt="">
                     <div class="studentDetails">
-                        <p>jseka wardy</p>
-                        <p>Student</p>
-                        <p>email</p>
-                        <p>phone number </p>
+                        <p>no reports yet</p>
                     </div>
                 </div>
             </div>
-        </section>
-        <section class="personalContainer">
-            <div class="headBtnContainer">
-                <h2>personal information</h2>
-                <!-- <button class="edit edit2">
-                        <span class="material-symbols-outlined">border_color</span>edit
-                    </button> -->
-            </div>
-            <div class="detailsEditContainer">
-                <form class="detailsEdit">
-                    <div class="inputContainer">
-                        <label for="">First name:</label>
-                        <input type="text" class="containerInputs" placeholder="First name" required>
-                    </div>
-                    <div class="inputContainer">
-                        <label for="">Last name:</label>
-                        <input type="text" class="containerInputs" placeholder="Last name" required>
-                    </div>
-                    <div class="inputContainer">
-                        <label for="">email:</label>
-                        <input type="email" class="containerInputs" placeholder="example@gmail.com" required>
-                    </div>
-                    <div class="inputContainer">
-                        <label for="">Phone Number:</label>
-                        <input type="tel" name="Phone Number" pattern="[0-9]{11}" required placeholder="Phone Number">
-                    </div>
-                </form>
-            </div>
-            <button class="apply">Apply</button>
         </section>
     </main>
     <footer id="footer">
