--- a/doctorReport.html
+++ b/doctorReport.html
@@ -9,7 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=border_color" />
         <link rel="icon" type="image/x-icon" href="imgs/logo.svg">
         <title>doctor report</title>
-    <script src="doctorAccount.js" defer></script>
+    <script src="doctorReport.js" defer></script>
 </head>
 
 <body>
@@ -40,14 +40,13 @@
                 <h2>My reports</h2>
             </div>
 
-            <div class="doctorContainer">
-                <div class="doctorDetailsContainer">
-                    <img id="img" src="imgs/3.png" alt="">
-                    <div class="doctorDetails">
-                        <p>jseka wardy</p>
-                        <p>doctor</p>
-                        <p>email</p>
-                        <p>phone number </p>
+            <div class="studentContainer">
+                <div class="illStudentContainer">
+                    <div class="illStudentDetails">
+                    </div>
+                </div>
+                <div class="goodStudentContainer">
+                    <div class="goodStudentDetails">
                     </div>
                 </div>
             </div>
