--- a/studentReport.html
+++ b/studentReport.html
@@ -9,7 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=border_color" />
         <link rel="icon" type="image/x-icon" href="imgs/logo.svg">
         <title>student health</title>
-    <script src="studentAccount.js" defer></script>
+    <script src="studentReport.js" defer></script>
 </head>
 
 <body>
