--- a/doctorAccount.html
+++ b/doctorAccount.html
@@ -37,7 +37,7 @@
     <main>
         <section class="detailsContainer">
             <div class="t">
-                <h2>My profile Doctor</h2>
+                <h2>My profile</h2>
                 <!-- <button class="edit hidden" id="edit"> <span class="material-symbols-outlined">border_color</span>edit</button> -->
             </div>
 
@@ -45,10 +45,10 @@
                 <div class="doctorDetailsContainer">
                     <img id="img" src="imgs/3.png" alt="">
                     <div class="doctorDetails">
-                        <p>jseka wardy</p>
+                        <p>Ahmed Eid</p>
                         <p>doctor</p>
-                        <p>email</p>
-                        <p>phone number </p>
+                        <p>ahmedeid@gmail.com</p>
+                        <p>01110231717</p>
                     </div>
                 </div>
             </div>
