--- a/homePageStudent.html
+++ b/homePageStudent.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" type="image/x-icon" href="imgs/logo.svg">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="imgs/logo.svg">
   <title>Home page</title>
 </head>
 
@@ -44,14 +45,20 @@
       <p>Our services</p>
       <div class="section2conCon">
         <div class="section2con">
-          <p><i class="fa-solid fa-bone fa-rotate-90" style="color: #74C0FC;"></i> X-Ray scan</p>
-          <p>loremmdmd d r rnmememed d dmeujeen enenje</p>
+          <p><span class="material-icons">monitor_heart</span> Upload your chest X-rays for AI-based diagnosis</p>
         </div>
         <div class="section2con">
-          <p><i class="fa-solid fa-robot" style="color: #74C0FC;"></i> Our bot</p>
-          <p>To help doctors and students to save time and money.</p>
+          <p><span class="material-icons">local_hospital</span> Receive medical reports reviewed by real doctors</p>
+        </div>
+        <div class="section2con">
+          <p><span class="material-icons">smart_toy</span> Chat with a smart health bot for general medical advice</p>
+        </div>
+        <div class="section2con">
+          <p><span class="material-icons">campaign</span> Access your personal health records anytime</p>
         </div>
       </div>
+    </section>
+    
     </section>
   </main>
   <footer id="footer">
