--- a/logIn.html
+++ b/logIn.html
@@ -39,7 +39,7 @@
           <a href="#">Forgot password?</a>
         </div>
 
-        <button type="submit">Login</button>
+        <button type="submit" onclick="window.location.href='homePageDoctor.html'">Login</button>
       </form>
     </div>
 
