--- a/signUp.html
+++ b/signUp.html
@@ -26,14 +26,14 @@
                     <button  class="formTypeBtn" value="doctor">doctor</button>
                     <button  class="formTypeBtn hover" value="student">student</button>
                 </div>
-                <form action="#" id="signUpForm">
+                <form action="homePagestudent.html" id="signUpForm">
                     <input type="text" class="containerInputs" placeholder="First name" required>
                     <input type="text" class="containerInputs" placeholder="Last name" required>
                     <input type="tel" class="containerInputs" name="Phone Number" pattern="[0-9]{11}" required
                         placeholder="Phone Number">
                     <input type="email" class="containerInputs" placeholder="example@gmail.com" required>
                     <input type="password" class="containerInputs" placeholder="Password" required>
-                    <input type="text" class="hidden containerInputs" id="drId" placeholder="Doctor ID" required>
+                    <input type="text" class="hidden containerInputs" id="drId" placeholder="Doctor ID">
                     <input type="submit" id="submitBtn">
                 </form>
             </div>
