--- a/studentAccount.html
+++ b/studentAccount.html
@@ -39,7 +39,7 @@
     <main>
         <section class="detailsContainer">
             <div class="t">
-                <h2>My profile student</h2>
+                <h2>My profile</h2>
                 <!-- <button class="edit hidden" id="edit"> <span class="material-symbols-outlined">border_color</span>edit</button> -->
             </div>
 
@@ -47,10 +47,10 @@
                 <div class="studentDetailsContainer">
                     <img id="img" src="imgs/2.png" alt="">
                     <div class="studentDetails">
-                        <p>jseka wardy</p>
+                        <p>Nada Tarek</p>
                         <p>Student</p>
-                        <p>email</p>
-                        <p>phone number </p>
+                        <p>nadaaabdlla@gmail.com</p>
+                        <p>01557354981</p>
                     </div>
                 </div>
             </div>
