--- a/studentReport.html
+++ b/studentReport.html
@@ -9,7 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=border_color" />
         <link rel="icon" type="image/x-icon" href="imgs/logo.svg">
         <title>student health</title>
-    <script src="studentReport.js" defer></script>
+    <!-- <script src="studentReport.js" defer></script> -->
 </head>
 
 <body>
@@ -44,9 +44,14 @@
 
             <div class="studentContainer">
                 <div class="studentDetailsContainer">
-                    <img id="img" class="hidden" src="" alt="">
+                    <img id="img" src="imgs/test.jpeg" alt="">
                     <div class="studentDetails">
-                        <p>no reports yet</p>
+                        <div class="studentCard ill">
+                            <p><strong>Upload Date:</strong> 2025-05-17</p>
+                            <p><strong>Result:</strong> Signs of pneumonia detected</p>
+                            <p><strong>Comment:</strong></p>
+                            <p>The X-ray shows patchy infiltrates in the right lower lung zone. Recommend further clinical evaluation and possible antibiotics. Student should follow up with the university clinic.</p>
+                          </div>
                     </div>
                 </div>
             </div>
