--- a/logIn.html
+++ b/logIn.html
@@ -22,7 +22,7 @@
         <h2>University Care System</h2>
       </div>
       <h3>Log In</h3>
-      <form id="loginForm">
+      <form action="homePageDoctor.html" id="loginForm">
         <label for="name">Name</label>
         <input type="text" id="name" placeholder="Account name" required />
 
@@ -39,7 +39,7 @@
           <a href="#">Forgot password?</a>
         </div>
 
-        <button type="submit" onclick="window.location.href='homePageDoctor.html'">Login</button>
+        <button type="submit" >Login</button>
       </form>
     </div>
 
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <script src="login.js"></script>
+  <!--<script src="login.js"></script>-->
 </body>
 
 </html>
