--- a/logIn.html
+++ b/logIn.html
@@ -45,7 +45,7 @@
 
     <!-- Right Side - Image -->
     <div class="signup-box">
-      <img src="imgs/Rectangle14.svg" alt="Radiologist" />
+      <img src="imgs/1.jpg" alt="Radiologist" />
     </div>
   </div>
 
